# mal

./: .gitignore  Makefile
pdswan-haskell/: LICENSE  Makefile  README.md  pdswan-haskell.cabal  run
pdswan-haskell/app/: Step0.hs  Step1.hs  Step2.hs
pdswan-haskell/src/: Lib.hs
