name:                pdswan-haskell
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pdswan/pdswan-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Peter Swan
maintainer:          pdswan@gmail.com
copyright:           2017 Peter Swan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec
  default-language:    Haskell2010

executable step0_repl
  hs-source-dirs:      app
  main-is:             Step0.hs
  ghc-options:         -main-is Step0 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pdswan-haskell
  default-language:    Haskell2010

executable step1_read_print
  hs-source-dirs:      app
  main-is:             Step1.hs
  ghc-options:         -main-is Step1 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pdswan-haskell
  default-language:    Haskell2010

executable step2_eval
  hs-source-dirs:      app
  main-is:             Step2.hs
  ghc-options:         -main-is Step2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , pdswan-haskell
  default-language:    Haskell2010

